[package]
name = "metime_core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
clap-repl = "0.3.1"
derive_more = { version = "1.0.0", features = ["full"] }
peg = "0.8.4"
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
